Merge remote-tracking branch 'origin/structured_endpoint' into feature/structured-medications